First pass at a quick and dirty ORC extractor for USQL. TODO:   * Switch to Memory Mapped Files for columnwise or stripe wise parallelism.   * Utilize Extractor CTOR to pass-in fake pushdown predicates, and at least operate on them at the rowgroup / stripe level.   * Add test files.

--- a/ApacheOrcDotNet/ApacheOrcDotNet.csproj
+++ b/ApacheOrcDotNet/ApacheOrcDotNet.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net452;netstandard1.3</TargetFrameworks>
+    <TargetFrameworks>net452</TargetFrameworks>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <AssemblyName>ApacheOrcDotNet</AssemblyName>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
@@ -18,10 +18,6 @@
     <Reference Include="System.Runtime" />
     <Reference Include="System" />
     <Reference Include="Microsoft.CSharp" />
-  </ItemGroup>
-
-  <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard1.3' ">
-    <PackageReference Include="System.Runtime.Numerics" Version="4.3.0" />
   </ItemGroup>
 
 </Project>
