--- a/ApacheOrcDotNet.Test/ApacheOrcDotNet.Test.csproj
+++ b/ApacheOrcDotNet.Test/ApacheOrcDotNet.Test.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp1.1;net452</TargetFrameworks>
+    <TargetFrameworks>net452</TargetFrameworks>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <AssemblyName>ApacheOrcDotNet.Test</AssemblyName>
     <IsPackable>false</IsPackable>
